# non-euclidian-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  init.sh
resources/GameData/shaders/: post_outline.frag  post_outline.vert  screen.frag  screen.vert  shader.frag  shader.vert
src/: game.cpp  game.h  main.cpp  window.cpp  window.h
src/graphics/: renderer.cpp  renderer.h
src/graphics/objects/: camera.cpp  camera.h  fbo.cpp  fbo.h  font.cpp  font.h  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/graphics/textures/: surface.cpp  surface.h  texture.cpp  texture.h
src/maths/: quaternion.cpp  quaternion.h
src/utils/: events.cpp  events.h  timer.cpp  timer.h
